# collaborative-zksnark

./: README.md
algebra/ec/src/: group.rs  lib.rs
algebra/ff/src/fields/: mod.rs
crypto-primitives/: Cargo.toml
crypto-primitives/cp-benches/: Cargo.toml
crypto-primitives/cp-benches/benches/crypto_primitives/: comm.rs  crh.rs  prf.rs  signature.rs
crypto-primitives/src/: lib.rs
crypto-primitives/src/crh/: mod.rs
crypto-primitives/src/crh/bowe_hopwood/: constraints.rs  mod.rs
crypto-primitives/src/crh/mimc/: constraints.rs  mod.rs
crypto-primitives/src/encryption/: constraints.rs  mod.rs
crypto-primitives/src/encryption/elgamal/: constraints.rs  mod.rs
crypto-primitives/src/encryption/poseidon/: mod.rs
crypto-primitives/src/prf/blake2s/: constraints.rs
curves/ed_on_bls12_377/: Cargo.toml
curves/ed_on_bn254/: Cargo.toml
curves/ed_on_bw6_761/: Cargo.toml
curves/ed_on_cp6_782/: Cargo.toml
curves/ed_on_mnt4_298/: Cargo.toml
curves/ed_on_mnt4_753/: Cargo.toml
curves/mnt4_298/: Cargo.toml
curves/mnt4_753/: Cargo.toml
curves/mnt6_298/: Cargo.toml
curves/mnt6_753/: Cargo.toml
curves/pallas/: Cargo.toml
curves/vesta/: Cargo.toml
marlin/src/: lib.rs
mpc-net/: Cargo.toml
mpc-plonk/src/relations/: flat.rs
mpc-snarks/: Cargo.toml
mpc-snarks/results/: pvde-snark-16-2.txt
mpc-snarks/scripts/: bench.zsh  experiments.zsh  pvde.zsh
mpc-snarks/src/: client.rs  elgamal.rs  encryption.rs  groth.rs  lib.rs  merkle.rs  mimc.rs  poseidon.rs  proof.rs  silly.rs
mpc-snarks/src/groth/: prover.rs
nonnative/: Cargo.toml
poly-commit/src/: lib.rs
r1cs-std/src/: lib.rs
snark/: Cargo.toml
snark/relations/src/r1cs/: constraint_system.rs
sponge/: Cargo.toml
sponge/src/: lib.rs
sponge/src/poseidon/: constraints.rs  mds_matrix.rs  mod.rs  round_constants.rs
