[package]
name = "cp-benches"
version = "0.1.0"
authors = [ "arkworks contributors"]
description = "Benchmarks for cryptographic primitivesthat are used by Zexe"
repository = "https://github.com/arkworks-rs/crypto-primitives"
keywords = ["r1cs", "groth16", "gm17", "pedersen", "blake2s"]
categories = ["cryptography"]
license = "MIT/Apache-2.0"
publish = false
edition = "2018"

################################# Dependencies ################################

[dev-dependencies]
#ark-ed-on-bls12-377 = { git = "https://github.com/arkworks-rs/curves/", default-features = false }
ark-ed-on-bls12-377 = { path = "../../curves/ed_on_bls12_377/", default-features = false }
blake2 = { version = "0.9", default-features = false }
criterion = "0.3.1"
#crypto-primitives = { path = "../crypto-primitives" } #zeroknight
ark-crypto-primitives = { path = "../../crypto-primitives" } 
ark-ff = {path="../../algebra/ff", version="^0.2.0", default-features = false}
ark-std = { path="../../utils", version="^0.2.0", default-features = false}

rand = { version = "0.7", default-features = false, features = ["std"] }    #zeroknight

################################# Benchmarks ##################################

[[bench]]
name = "pedersen_crh"
path = "benches/crypto_primitives/crh.rs"
harness = false

[[bench]]
name = "pedersen_comm"
path = "benches/crypto_primitives/comm.rs"
harness = false

[[bench]]
name = "blake2s_prf"
path = "benches/crypto_primitives/prf.rs"
harness = false

[[bench]]
name = "schnorr_sig"
path = "benches/crypto_primitives/signature.rs"
harness = false
