[package]
name = "ark-ed-on-cp6-782"
version = "0.2.0"
authors = [ "arkworks contributors" ]
description = "A Twisted Edwards curve defined over the scalar field of the CP6-782 curve"
homepage = "https://arkworks.rs"
repository = "https://github.com/arkworks-rs/algebra"
documentation = "https://docs.rs/ark-ed-on-cp6-782/"
keywords = ["cryptography", "finite-fields", "elliptic-curves" ]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
#ark-ff = { version = "^0.2.0", default-features = false }
ark-ff = { path ="../../algebra/ff/", version = "^0.2.0", default-features = false }   # zeroknight

#ark-ec = { version = "^0.2.0", default-features = false }
ark-ec = { path="../../algebra/ec/", version="^0.2.0", default-features = false }
#ark-std = { path = "../util",  path = "../util", default-features = false }
ark-std = { path = "../../utils",  version="^0.2.0", default-features = false }

#ark-r1cs-std = { version = "^0.2.0", default-features = false, optional = true }
ark-r1cs-std = { path="../../r1cs-std", version="^0.2.0", default-features = false, optional = true }
ark-bls12-377 = { version = "^0.2.0", path = "../bls12_377", default-features = false, features = [ "base_field" ] }

[dev-dependencies]
#ark-relations = { version = "^0.2.0", default-features = false }
#ark-serialize = { version = "^0.2.0", default-features = false }
#ark-algebra-test-templates = { version = "^0.2.0", default-features = false }
ark-relations = { version="^0.2.0", path = "../../snark/relations", default-features = false }
ark-serialize = { version="^0.2.0", path = "../../algebra/serialize", default-features = false }
ark-algebra-test-templates = { version="^0.2.0", path = "../../algebra/test-templates", default-features = false }

ark-curve-constraint-tests = { path = "../curve-constraint-tests", default-features = false }

[features]
default = []
std = [ "ark-std/std", "ark-ff/std", "ark-ec/std", "ark-bls12-377/std" ]
r1cs = ["ark-r1cs-std"]